force-app/main/default/objects/UserMeasurementIncrement__e/UserMeasurementIncrement__e.object-meta.xml
<CustomObject>
    <label>UserMeasurement Increment</label>
    <pluralLabel>UserMeasurement Increments</pluralLabel>
</CustomObject>