force-app/main/default/objects/UserMeasurementIncrement__e/fields/Increment__c.field-meta.xml
<CustomField>
    <fullName>Increment__c</fullName>
    <label>Increment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>