force-app/main/default/objects/UserMeasurementIncrement__e/fields/MeasurementId__c.field-meta.xml
<CustomField>
    <fullName>MeasurementId__c</fullName>
    <label>Measurement Id</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>