force-app/main/default/objects/UserMeasurementIncrement__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User Id</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>